<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    android:padding="40dp"
    tools:context="./LoginActivity" >

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <EditText
            android:id="@+id/et_nickname"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/et_bg"
            android:hint="@string/prompt_nickname"
            android:paddingLeft="40dp"
            android:singleLine="true"
            android:text=""
            android:textColor="@android:color/white" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/et_nickname"
            android:layout_alignLeft="@+id/et_nickname"
            android:layout_alignTop="@+id/et_nickname"
            android:layout_marginLeft="15dp"
            android:scaleType="fitCenter"
            android:src="@drawable/account" />
    </RelativeLayout>

    <RadioGroup
        android:id="@+id/radio_user"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/btn_user"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/user" />

        <RadioButton
            android:id="@+id/btn_server"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/server" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_login_bg"
        android:onClick="onViewClick"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_server_setting"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="right"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:onClick="onViewClick"
        android:text="@string/server_setting"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

</LinearLayout>