<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:demo="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <com.examples.common.TitleView
        android:id="@+id/view_titlebar"
        style="@style/TitleBar"
        android:gravity="center_vertical"
        demo:titlebar_title_text="@string/setting" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:text="@string/video" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:id="@+id/view_video_resolution"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="5dp" >

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/resolution" />

                <Spinner
                    android:id="@+id/btn_video_resolution"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/videosizes" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="5dp"
                android:visibility="gone" >

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/video_mode" />

                <Spinner
                    android:id="@+id/btn_video_mode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/videomodes" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="5dp" >

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/video_quality" />

                <Spinner
                    android:id="@+id/btn_video_minquality"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/minquality" />

                <Spinner
                    android:id="@+id/btn_video_maxquality"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/maxquality" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/view_video_fps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="5dp" >

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/video_fps" />

                <Spinner
                    android:id="@+id/btn_video_fps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/fps" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/view_video_whrate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="5dp"
                android:visibility="gone" >

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/video_whrate" />

                <Spinner
                    android:id="@+id/btn_video_whrate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/videowhrates" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_weight="0"
        android:gravity="right"
        android:orientation="horizontal"
        android:padding="5dp" >

        <Button
            android:id="@+id/btn_cacel"
            style="@style/CommonBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="20dp"
            android:padding="5dp"
            android:text="@string/cacel" />

        <Button
            android:id="@+id/btn_ok"
            style="@style/CommonBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:padding="5dp"
            android:text="@string/ok" />
    </LinearLayout>

</LinearLayout>