<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:demo="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    tools:context="./MgrActivity" >

    <com.examples.common.TitleView
        android:id="@+id/view_titlebar"
        style="@style/TitleBar"
        android:gravity="center_vertical"
        demo:titlebar_left_btn_text="@string/logout"
        demo:titlebar_right_btn_text="@string/call"
        demo:titlebar_title_text="@string/choose_service" />

    <ListView
        android:id="@+id/lv_server"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1" >
    </ListView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_weight="0" >

        <CheckBox
            android:id="@+id/cb_autogetuser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="系统自动分配客户" />

        <Button
            android:id="@+id/btn_getuser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:clickable="false"
            android:enabled="false"
            android:onClick="onViewClick"
            android:text="下一位客户" />
    </LinearLayout>

</LinearLayout>